force-app/main/default/objects/Contract/fields/Age_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_End_Date__c</fullName>
    <formula>Round( TODAY()- EndDate,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for demand tool formula to count end date</inlineHelpText>
    <label>Age End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>