force-app/main/default/objects/Contract/fields/Amendment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amendment Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Amendment Opportunity)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>