force-app/main/default/objects/Contract/fields/Auto_Renewal_Cancelled_Contract__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Cancelled_Contract__c</fullName>
    <inlineHelpText>Fill-in the date when the customer decided to terminate the Auto Renewal clause.</inlineHelpText>
    <label>Auto Renewal Cancelled (Contract)</label>
    <type>Date</type>
</CustomField>