force-app/main/default/objects/Contract/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the Account that the Invoice shall be sent to. Introduced by JL, to support different customer account(School) with potentially other Account that invoices shall be sent to. 
This field will often be the same as the Account, otherwise usually the Parent Account or the Municipality.</description>
    <inlineHelpText>The Account that the invoices shall be sent to.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts Where Billed To</relationshipLabel>
    <relationshipName>ContractsWhereBilledTo</relationshipName>
    <type>Lookup</type>
</CustomField>