force-app/main/default/objects/Contract/fields/Bill_To_Account_ID_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_ID_TEXT__c</fullName>
    <formula>SBQQ__Order__r.Bill_To_Account__r.Account_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account ID (TEXT)</label>
    <type>Text</type>
</CustomField>