force-app/main/default/objects/Contract/fields/Bill_To_Account_is_Municipality__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_is_Municipality__c</fullName>
    <formula>Bill_To_Account__r.municipalityaccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account is Municipality</label>
    <type>Checkbox</type>
</CustomField>