force-app/main/default/objects/Contract/fields/Bill_To_Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Text__c</fullName>
    <formula>SBQQ__Order__r.Bill_To_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill-To Account (Text ID)</label>
    <type>Text</type>
</CustomField>