force-app/main/default/objects/Contract/fields/Clio_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Clio_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to be able to store information from the Quote/Order that generated this contract. Field will be populated by workflow when contract is created.</description>
    <label>Auto Renewal (Contract)</label>
    <type>Checkbox</type>
</CustomField>