force-app/main/default/objects/Contract/fields/Clio_Framework_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Clio_Framework_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Introduced to clearly indicate if this is a framework agreement, or a standalone agreement.
True means that it is a framework agreement.</description>
    <inlineHelpText>Indicates whether this contract is part of a Framework Agreement or not.</inlineHelpText>
    <label>Framework Agreement</label>
    <type>Checkbox</type>
</CustomField>