force-app/main/default/objects/Contract/fields/Clio_Option_Comment__c.field-meta.xml
<CustomField>
    <fullName>Clio_Option_Comment__c</fullName>
    <description>Comment field to the Option Expiration Date. Likely, only used for internal needs.</description>
    <inlineHelpText>Comment field to the Option Expiration Date.</inlineHelpText>
    <label>Option Comment</label>
    <type>TextArea</type>
</CustomField>