force-app/main/default/objects/Contract/fields/Contract_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_18_character__c</fullName>
    <description>ID 18-character for reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ID 18-character for reports</inlineHelpText>
    <label>Contract ID 18-character</label>
    <type>Text</type>
</CustomField>