force-app/main/default/objects/Contract/fields/Contract_Owner_ID_18_charachter__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_ID_18_charachter__c</fullName>
    <formula>Owner.User_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Owner ID 18-charachter</label>
    <type>Text</type>
</CustomField>