force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Primary: Clones existing Contract and Subscriptions without connecting the new Contract to a existing one.

Delivery: Used for municipality deals or deals where multiple schools will have access to the purchased subscriptions. Deep clone of contract and subscriptions. Connects the cloned contract to an primary contract.</description>
    <inlineHelpText>Primary: Clones existing Contract and Subscriptions without connecting the new Contract to a existing one.

Delivery: Deep clone for municipality deals or deals where multiple schools will have access to purchased subscriptions on a common order.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>