force-app/main/default/objects/Contract/fields/Count_Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Count_Active_Subscriptions__c</fullName>
    <description>Populated via Demand Tool - Counts the number of Active Subscriptions on the Contract</description>
    <label>Count Active Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>