force-app/main/default/objects/Contract/fields/Count_Contract__c.field-meta.xml
<CustomField>
    <fullName>Count_Contract__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>