force-app/main/default/objects/Contract/fields/Count_Renewed_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Count_Renewed_Subscriptions__c</fullName>
    <description>Populated by Demand Tool - Sum of Subscriptions on Contract with status Renewed.</description>
    <label>Count Renewed Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>