force-app/main/default/objects/Contract/fields/Count_Terminated_Subscripitons__c.field-meta.xml
<CustomField>
    <fullName>Count_Terminated_Subscripitons__c</fullName>
    <description>Populated by Demand Tool - Counts number of Subscriptions on Contract with Status Terminated.</description>
    <label>Count Terminated Subscripitons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>