force-app/main/default/objects/Contract/fields/Delivery_Contracts_Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contracts_Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contracts (Primary Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Contracts (Primary Account)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>