force-app/main/default/objects/Contract/fields/Maintenance_Last_Modified_by__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Last_Modified_by__c</fullName>
    <formula>SBQQ__RenewalOpportunity__r.LastModifiedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance - Last Modified by</label>
    <type>Text</type>
</CustomField>