force-app/main/default/objects/Contract/fields/Maintenance_Renewal_Opp_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Renewal_Opp_Modified_Date__c</fullName>
    <formula>SBQQ__RenewalOpportunity__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance - Renewal Opp Modified Date</label>
    <type>Date</type>
</CustomField>