force-app/main/default/objects/Contract/fields/MigratedSalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>MigratedSalesOrderNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique SalesOrder identifier used for importing and updating contract data during the data migration May 2019.</description>
    <externalId>true</externalId>
    <label>MigratedSalesOrderNumber</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>