force-app/main/default/objects/Contract/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Use for report</description>
    <formula>TEXT(SBQQ__Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>