force-app/main/default/objects/Contract/fields/Opportunity_Yearly_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Yearly_Order_Value__c</fullName>
    <description>For Report</description>
    <formula>SBQQ__RenewalOpportunity__r.Clio_Yearly_Opportunity_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Report</inlineHelpText>
    <label>Opportunity Yearly Order Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>