force-app/main/default/objects/Contract/fields/Option_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Expiration_Date__c</fullName>
    <description>- Field used also to have the checkbox &quot;Option to Opt Out&quot; in the Lightning component frame &quot;Reasons for Approval&quot;.
- Used in Process Builder Option to Opt out Boolean</description>
    <inlineHelpText>The option to Opt Out is not possible after this date.
This option requires approval of Head of Sales.</inlineHelpText>
    <label>Option Expiration Date</label>
    <type>Date</type>
</CustomField>