force-app/main/default/objects/Contract/fields/Primary_Contract__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to connect Delivery Contracts to a Primary Contract.</description>
    <inlineHelpText>Delivery contracts are always connected to a Primary Contract</inlineHelpText>
    <label>Primary Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Delivery Contracts</relationshipLabel>
    <relationshipName>Primary_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>