force-app/main/default/objects/Contract/fields/Primary_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract_Id__c</fullName>
    <formula>Primary_Contract__r.Contract_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contract Id</label>
    <type>Text</type>
</CustomField>