force-app/main/default/objects/Contract/fields/Primary_Contract_is_Municipality__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract_is_Municipality__c</fullName>
    <formula>Delivery_Contracts_Primary_Account__r.municipalityaccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contract is Municipality</label>
    <type>Checkbox</type>
</CustomField>