force-app/main/default/objects/Contract/fields/Renewal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Close_Date__c</fullName>
    <description>Use for report 2021-03-08</description>
    <formula>SBQQ__RenewalOpportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report 2021-03-08</inlineHelpText>
    <label>Renewal Close Date</label>
    <type>Date</type>
</CustomField>