force-app/main/default/objects/Contract/fields/Renewal_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_ID__c</fullName>
    <formula>SBQQ__RenewalOpportunity__r.Opportunity_ID_18_Character__c</formula>
    <label>Renewal Opportunity ID</label>
    <type>Text</type>
</CustomField>