force-app/main/default/objects/Contract/fields/Renewal_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Probability__c</fullName>
    <formula>SBQQ__RenewalOpportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Opportunity Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>