force-app/main/default/objects/Contract/fields/Renewal_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_ID__c</fullName>
    <formula>SBQQ__RenewalOpportunity__r.SBQQ__PrimaryQuote__r.Quote_ID_18_Charachter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Quote ID</label>
    <type>Text</type>
</CustomField>