force-app/main/default/objects/Contract/fields/Renewal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Stage__c</fullName>
    <formula>TEXT (SBQQ__RenewalOpportunity__r.StageName)</formula>
    <label>Renewal Stage</label>
    <type>Text</type>
</CustomField>