force-app/main/default/objects/Contract/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Date when customer terminate our contract</description>
    <inlineHelpText>Date when customer terminate our contract</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>