force-app/main/default/objects/Contract/listViews/Maintenance_Muni_Deal_with_ASR.listView-meta.xml
<ListView>
    <fullName>Maintenance_Muni_Deal_with_ASR</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Municipality_Order__c</columns>
    <columns>Clio_Auto_Renewal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Municipality_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Clio_Auto_Renewal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Maintenance - Muni Deal with ASR</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>